--- a/Pokedex/skeleton/package.json
+++ b/Pokedex/skeleton/package.json
@@ -25,7 +25,9 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^4.3.1"
+    "webpack": "^4.29.3"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.1.2"
   }
 }
